[package]
name = "leetcode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

[features]
default = []
# default = ["section01", "section02", "section03", "section04"]
section01 = []
section02 = []
section03 = []
section04 = []
